# base-ai-server

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
app/: README.md  dependencies.py  main.py  taskiq.py
app/api/v1/: router.py
app/api/v1/auth/: router.py
app/api/v1/core/: router.py
app/api/v1/session/: router.py
app/auth_service/: README.md  auth_repo.py  auth_service.py  draft.md  task.md
app/auth_service/core/: config.py  dependencies.py  exceptions.py  limiter.py  middleware.py  model.py  schema.py  security.py
app/auth_service/tasks/: send_email.py
app/chat_service/: README.md  chat_service.py  task.md
app/chat_service/core/: config.py  exceptions.py  llm_client_manager.py  llm_tools.py  schema.py
app/core/: config.py  error.py  exceptions.py  lifespan.py  logger.py  model.py  postgres.py  redis.py  taskiq_middleware.py  telemetry.py
app/session_service/: README.md  session_repo.py  session_service.py  task.md
app/session_service/core/: config.py  model.py  prompt_registry.py  schema.py
app/session_service/tasks/: cleanup_inactive_sessions.py  persist_session_buffer.py
app/subscription_service/: README.md  subscription_repo.py  subscription_service.py  task.md
app/subscription_service/core/: __init__.py  config.py  exceptions.py  model.py  schema.py
app/subscription_service/tasks/: init_user_subscription.py  reset_expired_subscriptions_and_credits.py
test/integration/: test_app_lifespan.py  test_database_pools.py  test_health_endpoint.py
test/unit/: test_config.py  test_logging.py  test_tracing.py
(+60 files in other folders)
